Refactor project structure and update entities